Add unity version

--- a/BuildHelper/package.json
+++ b/BuildHelper/package.json
@@ -3,5 +3,6 @@
   "displayName": "Build Helper",
   "description": "A simple utility that adds menu items for building to any desktop platform.",
   "version": "1.0.0",
-  "keywords": ["Build", "Utility", "Testing"]
+  "keywords": ["Build", "Utility", "Testing"],
+  "unity": "2018.1"
 }
